[gd_scene load_steps=6 format=3 uid="uid://d31vd3nm25qfa"]

[ext_resource type="Texture2D" uid="uid://cvtsvhkpxfayb" path="res://assets/BG_DesertMountains/background1.png" id="1_ijih6"]
[ext_resource type="Script" path="res://scripts/level_select.gd" id="1_xfq8a"]
[ext_resource type="Texture2D" uid="uid://bmrfae211vctn" path="res://assets/BG_DesertMountains/background2.png" id="2_8shlp"]
[ext_resource type="Texture2D" uid="uid://d30bs2eshance" path="res://assets/BG_DesertMountains/background3.png" id="3_ljwxv"]
[ext_resource type="Theme" path="res://assets/Themes/generic_theme.tres" id="4_6lyag"]

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_xfq8a")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(1280, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Background"]
scale = Vector2(2, 1.15)
texture = ExtResource("1_ijih6")
centered = false

[node name="Middleground" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1280, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Middleground"]
scale = Vector2(2, 1.15)
texture = ExtResource("2_8shlp")
centered = false

[node name="Frontground" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(2, 2)
motion_mirroring = Vector2(1280, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Frontground"]
scale = Vector2(2, 1.15)
texture = ExtResource("3_ljwxv")
centered = false

[node name="Level1" type="Button" parent="."]
offset_left = 232.0
offset_top = 376.0
offset_right = 282.0
offset_bottom = 416.0
theme = ExtResource("4_6lyag")
text = "Level_One"

[node name="Level2" type="Button" parent="."]
offset_left = 604.0
offset_top = 376.0
offset_right = 654.0
offset_bottom = 416.0
theme = ExtResource("4_6lyag")
text = "Level_Two"

[node name="Level3" type="Button" parent="."]
offset_left = 1014.0
offset_top = 376.0
offset_right = 1072.0
offset_bottom = 416.0
theme = ExtResource("4_6lyag")
text = "Level_Three"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 333.0
offset_top = 361.0
offset_right = 742.0
offset_bottom = 401.0

[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_level_3_pressed"]
